# twig

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml
.github/workflows/: docker-publish.yml
discord/: .dockerignore  .env.example  build.rs
discord/migrations/: 20251106191203_initial.sql
discord/src/: main.rs
discord/src/commands/minecraft/: assign.rs  uptime.rs
discord/src/commands/tailscale/: assign.rs  mod.rs
discord/src/commands/utilitary/: ping.rs
discord/src/events/: mod.rs
discord/src/utils/: checks.rs  config.rs  db.rs  embed.rs  mod.rs
migrations/: 20251106191203_initial.sql
proto/: minecraft_bridge.proto
resources/: schema.sql
src/: main.rs
src/commands/: mod.rs
src/commands/minecraft/: assign.rs  mod.rs  unassign.rs  uptime.rs
src/commands/misc/: ping.rs
src/commands/tailscale/: join.rs  mod.rs  role.rs  tailscale.rs  unassign.rs
src/commands/utilitary/: mod.rs  ping.rs  status.rs
src/events/: guild_member_removal.rs  guild_member_update.rs  mod.rs  ready.rs
src/grpc/: mod.rs
src/grpc/message/: check_player_access.rs  mod.rs  register_proxy.rs
src/grpc/message/minecraft_bridge/: mod.rs
src/grpc/stream/: authenticated.rs  disconnect.rs  mod.rs
src/http/: discord.rs  mod.rs
src/utils/: checks.rs  config.rs  db.rs  docker.rs  embed.rs  grpc.rs  influxdb.rs  minecraft.rs  mod.rs  snowflake.rs  tailscale.rs
