[package]
name = "twig"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
poise = "0.6.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
snowflaked = "1.0.3"
tracing = "0.1.41"
dotenvy = { git = "https://github.com/allan2/dotenvy", rev = "86c0d6dd2938e615135813df9e3274bf8f42c455", features = [
  "macros",
] }
sysinfo = "0.37.2"

[build-dependencies]
vergen-gitcl = { version = "1.0.8" }
