[package]
name = "twig"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
snowflaked = "1.0.3"
tracing = "0.1.41"
dotenvy = { git = "https://github.com/allan2/dotenvy", rev = "86c0d6dd2938e615135813df9e3274bf8f42c455", features = [
  "macros",
] }
sysinfo = "0.37.2"
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio",
  "tls-native-tls",
  "macros",
] }
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
tower = "0.5.2"
tokio-stream = "0.1.17"
uuid = { version = "1.18.1", features = ["v4"] }
axum = "0.8.7"
chrono = "0.4.42"

[build-dependencies]
vergen-gitcl = { version = "1.0.8" }
# tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
